--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "A project to find movies built using omdb API and monogoDb",
   "type": "module",
   "main": "app.js",
   "scripts": {
