--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "build": "npm i"
   },
   "author": "\"Ijeoma\"",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
     "cors": "^2.8.5",
